//  Copyright (c) 2018 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blast;

option go_package = "pb";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message GetIndexPathResponse {
    string index_path = 1;
}

message GetIndexMappingResponse {
    google.protobuf.Any index_mapping = 1;
}

message GetIndexMetaResponse {
    string index_type = 1;
    string storage = 2;
    google.protobuf.Any config = 3;
}

message PutDocumentRequest {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message PutDocumentResponse {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message GetDocumentRequest {
    string id = 1;
}

message GetDocumentResponse {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message DeleteDocumentRequest {
    string id = 1;
}

message DeleteDocumentResponse {
    string id = 1;
}

message BulkRequest {
    message UpdateRequest {
        message Document {
            string id = 1;
            google.protobuf.Any fields = 2;
        }

        string method = 1;
        Document document = 2;
    }

    int32 batch_size = 1;
    repeated UpdateRequest update_requests = 2;
}

message BulkResponse {
    int32 put_count = 1;
    int32 put_error_count = 2;
    int32 delete_count = 3;
    int32 method_error_count = 4;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}

message PutNodeRequest {
    string cluster = 1;
    string node = 2;
}

message GetNodeRequest {
    string cluster = 1;
    string node = 2;
}

message GetNodeResponse {
    google.protobuf.Any value = 1;
}

message DeleteNodeRequest {
    string cluster = 1;
    string node = 2;
}
